--- a/requirements.txt
+++ b/requirements.txt
@@ -90,6 +90,7 @@ langchain==0.3.12
 langchain-chroma==0.1.4
 langchain-community==0.3.12
 langchain-core==0.3.25
+langchain-huggingface
 langchain-openai==0.2.12
 langchain-text-splitters==0.3.3
 langsmith==0.2.3
@@ -177,6 +178,7 @@ safetensors==0.4.5
 seaborn==0.13.2
 semantic-version==2.10.0
 Send2Trash==1.8.3
+sentence-transformers
 shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
@@ -204,7 +206,7 @@ tzdata==2024.2
 uri-template==1.3.0
 urllib3==2.2.3
 uvicorn==0.34.0
-uvloop==0.21.0
+# uvloop==0.21.0
 watchfiles==1.0.3
 wcwidth==0.2.13
 webcolors==24.11.1
